Fix overflow; box-sizing on all elements
box-sizing: border-box needs to be inherited on all elements, otherwise ending up with overflow issues.

--- a/src/layout/assets/style.css
+++ b/src/layout/assets/style.css
@@ -12,6 +12,10 @@ box-sizing: border-box;
 width: 100%;
 }
 
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 header {
   position: -webkit-sticky;
   position: sticky;
